--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,8 @@ repos:
   rev: master
   hooks:
     - id: go-fmt
-    # - id: go-imports
-    # - id: go-mod-tidy
+    - id: go-imports
+    - id: go-mod-tidy
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
