Add create customer profile (initial)

--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,jetbrains,windows,macos,linux
+__debug_bin
