--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,8 +2,8 @@ repos:
 - repo: git://github.com/dnephin/pre-commit-golang
   rev: master
   hooks:
-    # - id: go-fmt
-    # - id: go-imports
+    - id: go-fmt
+    - id: go-imports
     - id: go-mod-tidy
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
