--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
       - staging
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: foodworks-backend-demo
+  IMAGE_NAME: foodworks-api
 jobs:
   create_tag:
     # if: github.event.pull_request.merged == true
@@ -56,7 +56,7 @@ jobs:
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
           if [ "${{ github.ref }}" != "master" ]; then
-            VERSION=nightly
+            VERSION=alpha
           fi
           TAGS="${DOCKER_IMAGE}:${VERSION}"
           if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
