--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ APPLICATION_PORT=:8080
 POSTGRES_URL=postgresql://foodworks:foodworks@localhost:5432/foodworks
 REDIS_ADDR=localhost:6379
 REDIS_PASS=
+JWKS_URL=http://127.0.0.1:4456/.well-known/jwks.json
