--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,19 @@ on:
     branches:
       - master
       - staging
+env:
+  # TODO: Change variable to your image's name.
+  GO_VERSION: '^1.15.1'
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: $GO_VERSION # The Go version to download (if necessary) and use.
+      - run: go get golang.org/x/tools/cmd/goimports
       - uses: pre-commit/action@v2.0.0
   lint:
     name: lint
@@ -38,7 +45,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-go@v2
       with:
-        go-version: '^1.15.1' # The Go version to download (if necessary) and use.
+        go-version: $GO_VERSION
     - name: Cache Go modules
       uses: actions/cache@v2
       with:
