--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: $GO_VERSION # The Go version to download (if necessary) and use.
+          go-version: ${{GO_VERSION}} # The Go version to download (if necessary) and use.
       - run: go get golang.org/x/tools/cmd/goimports
       - uses: pre-commit/action@v2.0.0
   lint:
@@ -45,7 +45,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-go@v2
       with:
-        go-version: $GO_VERSION
+        go-version: ${{GO_VERSION}}
     - name: Cache Go modules
       uses: actions/cache@v2
       with:
