--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: ${{env.GO_VERSION}} # The Go version to download (if necessary) and use.
-      - run: go get golang.org/x/tools/cmd/goimports
+      - run: go install golang.org/x/tools/cmd/goimports
       - uses: pre-commit/action@v2.0.0
   lint:
     name: lint
