--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,8 @@ jobs:
         uses: actions/checkout@v2
       - name: golangci-lint
         uses: reviewdog/action-golangci-lint@v1
+        with:
+          golangci_lint_flags: "-p bugs,performance,unused -E gocritic,stylecheck,dupl,goconst,unconvert,gosec,asciicheck,misspell,nestif,exhaustive"
   go:
     name: test-go
     runs-on: ubuntu-latest
