--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,5 @@ REDIS_PASS=
 JWKS_URL=http://127.0.0.1:4456/.well-known/jwks.json
 ELASTICSEARCH_DB_URL=http://elasticsearch:9200/
 ELASTICSEARCH_URL=http://127.0.0.1:9200/
+RECOMMENDER_URL=http://127.0.0.1:5000
 DUMMY_PAYMENTS=enabled
